--- a/Advisor_K4/views/fileView.html
+++ b/Advisor_K4/views/fileView.html
@@ -1,4 +1,4 @@
-<div data-role="view" id="fileView" data-title="My Files" data-align="left" data-show="getFileSystem">
+<div data-role="view" id="fileView" data-title="My Files2" data-align="left" data-show="getFileSystem">
 	<header data-role="header">
 		<div data-role="navbar">
             <!--<a data-role="backbutton" data-align="left" href="#" id="backBtn">Back</a>-->
@@ -98,10 +98,10 @@
     		<div class="file"><p>file name</p></div>
     	</div>-->
     </div>
-    
+    <div id="fileField" type="text" readonly="readonly" style="vertical-align:top;background:brown;color:while">helloworldhelloworldhelloworldhelloworld</div>
  </div>   
     
-    <!--<div id="fileField" type="text" readonly="readonly"></div>-->
+    
     
     <!--<a id="menu" href="#menuOptions" data-rel="dialog">file details</a>
             <a id="get_file_details" href="#fileDetails" data-rel="dialog">file details</a>-->
