--- a/Advisor_K4/views/fileView.html
+++ b/Advisor_K4/views/fileView.html
@@ -1,4 +1,4 @@
-<div data-role="view" id="fileView" data-title="My Files" data-align="left" data-show="getFileSystem">
+<div data-role="view" id="fileView" data-title="My Files" data-align="left" data-show="getMyFiles">
 	<header data-role="header">
 		<div data-role="navbar">
             <!--<a data-role="backbutton" data-align="left" href="#" id="backBtn">Back</a>-->
@@ -46,6 +46,7 @@
     	</div>
      </div>
    </p>-->
+    <div id="fileField" type="text" readonly="readonly" style="vertical-align:top;background:#777978;color:white;height:2em;margin-bottom:3em;font-style:italic"></div>
     
   <div id="addFolderDialog" data-role="modalview" style="width:70%;height:50%" >
       <p>
@@ -98,7 +99,7 @@
     		<div class="file"><p>file name</p></div>
     	</div>-->
     </div>
-    <div id="fileField" type="text" readonly="readonly" style="vertical-align:bottom;background:brown;color:while"></div>
+    <!--<div id="fileField" type="text" readonly="readonly" style="vertical-align:bottom;background:brown;color:white"></div>-->
  </div>   
     
     
