--- a/Advisor_K4/views/contactSearchView.html
+++ b/Advisor_K4/views/contactSearchView.html
@@ -77,15 +77,21 @@
         </script>-->
                             
 	</div>
+    
+    <script type="text/x-kendo-template" id="contactsearch-listview-template">
+    <a href="\#hhProfileView?hhId=${hh_id}" style="text-decoration:none;">${lname}, ${fname}              
+            <p class="contact-type">${type}</p>
+    </a>
+    </script>
 
 
-     <script type="text/x-kendo-template" id="contactsearch-listview-template">
+     <script type="text/x-kendo-template" id="contactsearch-listview-template2">
                 <a href="\#hhSnapshotView?hhId=${hh_id}" style="text-decoration:none;">${lname}, ${fname} </a> 
                 <p class="contact-type">${type}</p>
                 <a href="\#hhProfileView?hhId=${hh_id}" data-role="button" data-icon="details" class="details-link" onclick="contactdetailclick(${hh_id});"></a>
      </script>
     
-     <script type="text/x-kendo-template" id="contactsearch-listview-template2">
+     <script type="text/x-kendo-template" id="contactsearch-listview-template3">
                 <a href="\#hhSnapshotView?hhId=${hh_id}" onclick="contactnameclick(${hh_id});">${lname}, ${fname} </a> 
                 
      </script>
