5/29 set image for each investor

--- a/Advisor_K4/views/fileView.html
+++ b/Advisor_K4/views/fileView.html
@@ -1,4 +1,4 @@
-<div data-role="view" id="fileView" data-title="My Files" data-align="left" data-show="getMyFiles">
+<div data-role="view" id="fileView" data-title="My Files1" data-align="left" data-init="getMyFiles">
 	<header data-role="header">
 		<div data-role="navbar">
             <!--<a data-role="backbutton" data-align="left" href="#" id="backBtn">Back</a>-->
