--- a/Advisor_K4/views/recentProposalsView.html
+++ b/Advisor_K4/views/recentProposalsView.html
@@ -5,8 +5,7 @@
             <span data-role="view-title"></span>            
 		</div>
 	</header>
-    <div id="recentProposalsViewContent" data-role="content">
-		<!-- List of contacts -->
+    <div id="recentProposalsViewContent" data-role="content">		
         <ul data-role="listview" data-style="inset" data-type="group">
             <li>
                 <ul id="proposallist" data-role="listview" data-style="inset"></ul>
@@ -14,12 +13,6 @@
         </ul>
 	</div>
 </div>
-
-<script type="text/x-kendo-template" id="recentproposal-listview-template">
-    <a href="\#proposalSummaryView?propId=${ProposalId}&amp;partyId=${PartyID}&amp;partyType=${PartyType}" style="text-decoration:none;">${ProposalName}            
-            <p class="contact-type">${PartyType}</p>
-    </a>
-</script>
 
 
 <div data-role="view" id="proposalSummaryView" data-title="Proposal Summary" data-align="left" data-show="getProposalSummary" >
@@ -48,9 +41,16 @@
        </ul>
         
         <div id="portfolioCompGrid" style="margin-left:1em;margin-right:1em"></div>
-     </div>
-    
+     </div>    
 </div> 
+
+
+<!--------------------------------------templates------------------------------------------>
+<script type="text/x-kendo-template" id="recentproposal-listview-template">
+    <a href="\#proposalSummaryView?propId=${ProposalId}&amp;partyId=${PartyID}&amp;partyType=${PartyType}" style="text-decoration:none;">${ProposalName}            
+            <p class="contact-type">${PartyType}</p>
+    </a>
+</script>
 
 <script id="portfolioCompTemplate" type="text/x-kendo-template">   
     <tr>
